[metadata]
name = realesrgan-ncnn-vulkan-python
version = 1.1.3
author = alexyz79
author_email = c.alexandre.pires@gamil.com
maintainer = alexyz79
maintainer_email = c.alexandre.pires@gamil.com
license = MIT
license_file = LICENSE
description = A Python FFI of xinntao/realesrgan-ncnn-vulkan achieved with SWIG
url = https://github.com/media2x/realesrgan-ncnn-vulkan-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    realesrgan
    ncnn
    vulkan
    swig

[options]
packages = find:
install_requires = pillow
python_requires = >=3.6
